@@ -2,6 +2,11 @@
 Made aranym debug output not go though the cookie (CVS mint
 kernel says PRIVILEGE VIOLATION if the cookie structure address
 space is accessed (utility.c).
+Bconout option implemenetation: redirects Bconout(con) output
+to puts() from the moment the phys WK is opened and returns
+it back afterwards (now the CVS XaAES boots again with
+lineafix on).
+
 
 2005-12-15 - johan
 Some improvements to the memory allocation debug facilities.
